# slm-benchmark-kit

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  QUICK_GUIDE.md  README.en.md  README.es.md  README.md  docker-compose.yml  pyproject.toml
configs/: benchmark_local_smoke.yaml  benchmark_ollama.yaml  benchmark_ollama_docker.yaml  benchmark_ollama_docker_smoke.yaml
datasets/: slm_tasks_ptbr.jsonl
docs/: README.md  human_eval_rubric.en.md  human_eval_rubric.es.md  human_eval_rubric.md  human_eval_rubric.pt-br.md  metodologia_estatistica.en.md  metodologia_estatistica.es.md  metodologia_estatistica.md  metodologia_estatistica.pt-br.md  release_protocol.en.md  release_protocol.es.md  release_protocol.md  release_protocol.pt-br.md
scripts/: agreement_report.py  analyze_results.py  docker_pull_models.py  prepare_human_eval.py  run_benchmark.py
src/slm_benchmark/: __init__.py  agreement.py  analysis.py  clients.py  config.py  dataset.py  human_eval.py  judges.py  runner.py
src/slm_benchmark_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: paper_outline.md  report_template.md
tests/: test_analysis.py  test_config_dataset.py  test_human_eval_agreement.py  test_runner_judges.py
