[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-benchmark-kit"
version = "0.3.0"
description = "Reusable benchmark framework for Small Language Models (SLMs)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Rico Zimmermann" }
]
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "tabulate>=0.9.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "statsmodels>=0.14.0",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
